# Nutrition

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  compose.deploy.yml  conftest.py  manage.py  pyproject.toml  pytest.ini  release-please-config.json  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: Auto-release-and-Asset.yml  build.yml  ci.yml  deploy.yml  release-please.yml
chat/: admin.py  forms.py  models.py  urls.py  views.py
chat/tests/: test_views.py
foods/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
foods/fixtures/: foods_min.json
foods/migrations/: 0001_initial.py
logs/: admin.py  calorie_math.py  forms.py  models.py  urls.py  views.py
logs/migrations/: 0001_initial.py
logs/tests/: test_calorie_math.py  test_meal_log.py
nutrition_bot/: asgi.py  settings.py  urls.py  wsgi.py
plans/: admin.py  forms.py  models.py  pdf.py  plan_engine.py  urls.py  views.py
plans/migrations/: 0001_initial.py
plans/tests/: test_plan_engine.py  test_views.py
static/css/: app.css
templates/: base.html
templates/chat/: chat.html
templates/foods/: food_list.html
templates/logs/: meal_log_form.html  meal_log_list.html
templates/plans/: plan_pdf.html  weekly_plan_detail.html  weekly_plan_generate.html
templates/users/: profile_form.html
users/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
