[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88
select = [
  "E",
  "F",
  "I",
  "UP",
  "DJ"
]
target-version = "py311"

[tool.ruff.per-file-ignores]
"manage.py" = ["E501"]
"*/migrations/*" = ["E501", "F401", "F841"]

[tool.mypy]
python_version = "3.11"
plugins = ["mypy_django_plugin.main"]
ignore_missing_imports = false
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true
exclude = [
  "migrations"
]

[[tool.mypy.overrides]]
module = [
  "PyPDF2.*",
  "xhtml2pdf.*"
]
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "nutrition_bot.settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "nutrition_bot.settings"
python_files = "tests.py test_*.py *_tests.py"
addopts = "-ra"
